--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -116,17 +116,17 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 1050,\n",
-              "  'time': '2023-12-27T19:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.11055', 'h': '1.11141', 'l': '1.11046', 'c': '1.11084'}},\n",
+              "  'volume': 247,\n",
+              "  'time': '2023-12-29T21:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.10357', 'h': '1.10368', 'l': '1.10342', 'c': '1.10366'}},\n",
               " {'complete': True,\n",
-              "  'volume': 799,\n",
-              "  'time': '2023-12-27T19:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.11075', 'h': '1.11081', 'l': '1.10996', 'c': '1.11018'}},\n",
-              " {'complete': False,\n",
-              "  'volume': 106,\n",
-              "  'time': '2023-12-27T20:00:00.000000000Z',\n",
-              "  'mid': {'o': '1.11019', 'h': '1.11038', 'l': '1.11016', 'c': '1.11037'}}]"
+              "  'volume': 256,\n",
+              "  'time': '2023-12-29T21:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.10366', 'h': '1.10388', 'l': '1.10360', 'c': '1.10379'}},\n",
+              " {'complete': True,\n",
+              "  'volume': 337,\n",
+              "  'time': '2023-12-29T21:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.10380', 'h': '1.10397', 'l': '1.10366', 'c': '1.10374'}}]"
             ]
           },
           "execution_count": 3,
@@ -259,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "SgGFrNvOso4K"
       },
@@ -312,15 +312,6 @@
         "x = pd.Series(signals)\n",
         "x.value_counts()\n",
         "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "#consider making 65 / 35 RSI + 1 and make above 70 / 30 as + 2 ssss"
       ]
     }
   ],
