--- a/TradingBotOanda.ipynb
+++ b/TradingBotOanda.ipynb
@@ -116,17 +116,17 @@
           "data": {
             "text/plain": [
               "[{'complete': True,\n",
-              "  'volume': 247,\n",
-              "  'time': '2023-12-29T21:15:00.000000000Z',\n",
-              "  'mid': {'o': '1.10357', 'h': '1.10368', 'l': '1.10342', 'c': '1.10366'}},\n",
+              "  'volume': 1426,\n",
+              "  'time': '2024-01-18T17:15:00.000000000Z',\n",
+              "  'mid': {'o': '1.08555', 'h': '1.08600', 'l': '1.08555', 'c': '1.08589'}},\n",
               " {'complete': True,\n",
-              "  'volume': 256,\n",
-              "  'time': '2023-12-29T21:30:00.000000000Z',\n",
-              "  'mid': {'o': '1.10366', 'h': '1.10388', 'l': '1.10360', 'c': '1.10379'}},\n",
-              " {'complete': True,\n",
-              "  'volume': 337,\n",
-              "  'time': '2023-12-29T21:45:00.000000000Z',\n",
-              "  'mid': {'o': '1.10380', 'h': '1.10397', 'l': '1.10366', 'c': '1.10374'}}]"
+              "  'volume': 1029,\n",
+              "  'time': '2024-01-18T17:30:00.000000000Z',\n",
+              "  'mid': {'o': '1.08590', 'h': '1.08635', 'l': '1.08556', 'c': '1.08635'}},\n",
+              " {'complete': False,\n",
+              "  'volume': 406,\n",
+              "  'time': '2024-01-18T17:45:00.000000000Z',\n",
+              "  'mid': {'o': '1.08634', 'h': '1.08647', 'l': '1.08604', 'c': '1.08604'}}]"
             ]
           },
           "execution_count": 3,
